--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>pom</packaging>
 	<modules>
-		<module>domain</module>
-		<module>persistence</module>
-		<module>web</module>
-        <module>service</module>
-        <module>repository</module>
-        <module>controller</module>
+		<module>user-service</module>
+        <module>post-service</module>
     </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
