--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8999
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=user-service
+server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/bni-bootcamp
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -13,3 +13,5 @@ spring.jpa.show-sql=true
 #spring.data.mongodb.database=alterra
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=password
+
+eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}:${random.uuid}
