--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -1,14 +1,11 @@
 spring:
   application:
     name: post-service
-  datasource:
-    url: jdbc:postgresql://localhost:5432/bni-bootcamp
-    username: postgres
-    password: root
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  data:
+    mongodb:
+      database: ${MONGODB_SCHEMA:testing-final}
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
 
 server:
   port: 8090
