--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 spring:
   application:
     name: post-service
-  datasource:
-    url: jdbc:postgresql://localhost:5432/bni-bootcamp
-    username: postgres
-    password: root
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  data:
+    mongodb:
+      database: ${MONGODB_SCHEMA:testing-final}
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
 
 server:
   port: 8090
+  error:
+    include-binding-errors: always
+    include-message: always
 
-eureka:
-  instance:
-    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}:${random.uuid}
+#eureka:
+#  instance:
+#    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}:${random.uuid}
