--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,16 +2,14 @@ spring.application.name=user-service
 server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bni-bootcamp
+spring.datasource.hikari.schema=spring-rest
 spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=alterra
-#spring.data.mongodb.username=root
-#spring.data.mongodb.password=password
+
+spring.security.user.name=admin
+spring.security.user.password=admin
 
 eureka.instance.instance-id=${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}:${random.uuid}
