--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name=auth-service
+server.port=8080
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/bni-bootcamp
 spring.datasource.username=postgres
 spring.datasource.password=root
@@ -8,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.security.user.name=admin
 spring.security.user.password=admin
 
+eureka.instance.instance-id= ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}:${random.uuid}
