--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -85,6 +85,10 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
 
     </dependencies>
 
